--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
   },
   "dependencies": {
     "aws-sdk": "^2.666.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
+    "fastify": "^2.14.0",
+    "fastify-file-upload": "^2.0.1",
     "sharp": "^0.25.2"
   }
 }
